2005-12-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: enhance -passwdfile features, filetransfer on by default.

2005-12-19  Dave Stuart <dave@justdave.us>
	* libvncserver/{main.c,rfbserver.c,cargs.c}, rfb/rfb.h: introduce
	  deferPtrUpdateTime, which defers the handling of pointer events
	  for a couple of milliseconds.

2005-12-19  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c, libvncclient/{sockets.c,vncviewer.c},
	  libvncserver/{main.c,rfbserver.c,sockets.c}: fix MinGW32 compilation

2005-12-08  "Mazin, Malvina" <Malvina.Mazin@kla-tencor.com>
	* configure.ac, libvncserver/sockets.c: on Solaris 2.7, write may
	  return ENOENT when it really means EAGAIN.

2005-12-07  Giampiero Giancipoli <giampiero.giancipoli@fredreggiane.com>
	* libvncclient/vncviewer.c: plug memory leaks

2005-12-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: use unicode to determine the keysym
	  (much more reliable than the old method)

2005-11-25  Karl Runge <runge@karlrunge.com>
	* configure.ac: disable tightvnc-filetransfer if no libpthread.
	  add --without-pthread option.
	* libvncserver/Makefile.am: enable WITH_TIGHTVNC_FILETRANSFER
	  conditional.
	* libvncserver/rfbserver.c: fix deadlock from
	  rfbReleaseExtensionIterator(), fix no libz/libjpeg builds.
	* libvncserver/{main.c,private.h}, rfb/rfbclient.h, libvncclient/{rfbproto.c,
	  tight.c,vncviewer.c}: fix no libz/libjpeg builds.
	* libvncserver/tightvnc-filetransfer/rfbtightserver.c: fix no
	  libz/libjpeg builds.  rm // comments.
	* libvncserver/tightvnc-filetransfer/filetransfermsg{.c,.h},
	  libvncserver/auth.c: rm // comments.
	* libvncserver/tightvnc-filetransfer/filelistinfo.h: set NAME_MAX if not
	  defined.
	* x11vnc: throttle load if fb update requests not taking place.

2005-10-22  Karl Runge <runge@karlrunge.com>
	* x11vnc: -filexfer file transfer, -slow_fb, -blackout noptr...
