@@ -61,6 +61,12 @@ void
 rfbRegisterProtocolExtension(rfbProtocolExtension* extension)
 {
 	rfbProtocolExtension* last;
+	static extMutex_initialized = 0;
+
+	if (! extMutex_initialized) {
+		INIT_MUTEX(extMutex);
+		extMutex_initialized = 1;
+	}
 
 	LOCK(extMutex);
 	last = extension;
