@@ -1,3 +1,7 @@
+2006-01-05  Karl Runge <runge@karlrunge.com>
+	* libvncserver/main.c: rfbRegisterProtocolExtension extMutex was
+	  never initialized.
+
 2005-12-24  Karl Runge <runge@karlrunge.com>
 	* x11vnc: enhance -passwdfile features, filetransfer on by default.
 
